--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,8 @@ description = Unified Python simulation and hardware communication environment f
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Rooholla-KhorramBakht/FR3Py
-author = Rooholla Khorrambakht
-author_email = rk4342@nyu.edu
+author = Rooholla Khorrambakht, Bolun Dai
+author_email = rk4342@nyu.edu, bd1555@nyu.edu
 license = MIT
 license_file = LICENSE
 classifiers =
