--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = FR3Py
 version = 1.0.0
-description = Unified Python simulation and hardware communication environment for Franka FR3 Robot
+description = Unified Python simulation and hardware communication environment for Franka FR3 robot
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Rooholla-KhorramBakht/FR3Py
