joint velocity interface is added

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,7 @@ endmacro(create_executable ROBOT_NAME)
 # Dynamic Interface
 create_executable(fr3_joint_torque)
 create_executable(fr3_task_velocity)
+create_executable(fr3_joint_velocity)
 
 
 
