--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,17 @@
         "array": "cpp",
         "chrono": "cpp",
         "random": "cpp"
-    }
+    },
+    "python.autoComplete.extraPaths": [
+        "/home/franka-ws/manipulation/franka_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages",
+        "",
+        "/home/franka-ws/Documents/biconvex_mpc/build"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/franka-ws/manipulation/franka_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages",
+        "",
+        "/home/franka-ws/Documents/biconvex_mpc/build"
+    ]
 }
