--- a/fr3_gripper/CMakeLists.txt
+++ b/fr3_gripper/CMakeLists.txt
@@ -4,7 +4,7 @@ project(fr3_gripper)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-find_package(Franka 0.10.0 REQUIRED)
+find_package(Franka 0.10.0 QUIET)
 if(NOT Franka_FOUND)
   find_package(Franka 0.8.0 REQUIRED)
 endif()
