--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ classifiers =
 packages = find:
 include_package_data = True
 install_requires =
-    numpy>=1.22.3
+    numpy
     pyzmq>=25.0.0
     pyyaml>=5.3.1
     pin==2.6.18
