--- a/setup.cfg
+++ b/setup.cfg
@@ -21,5 +21,5 @@ install_requires =
     pyyaml>=5.3.1
     pin==2.6.18
     proxsuite==0.3.7
-    pyrealsense2==2.54.1.5217
-    pupil_apriltags
+    # pyrealsense2==2.54.1.5217
+    # pupil_apriltags
