Update setup.cfg (relaxed version requirement on pin and proxsuite)

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,9 @@ install_requires =
     numpy
     pyzmq>=25.0.0
     pyyaml>=5.3.1
-    pin==2.6.18
-    proxsuite==0.3.7
+    pin
+    proxsuite
+    # pin==2.6.18
+    # proxsuite==0.3.7
     # pyrealsense2==2.54.1.5217
     # pupil_apriltags
